2007-06-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE, R/AllClass.R: "xsparseVector" class union.

	* R/sparseVector.R: more *sparseVector coercions, notably for
	non - double ones.


2007-06-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/colSums.R: new file for all (col|row)(Sums|Means) methods,
	  notably the new ones building on the new .Call(.)s:

	* src/dgCMatrix.c (DEF_gCMatrix_COLSUMS): use to define
	all 4 of [dlin]gCMatrix_colSums().

2007-06-18 16:12  Douglas Bates <bates@stat.wisc.edu>

	* [r4472] src/Syms.h, src/init.c: Added Matrix_lengthSym
	* [r4473] src/dgCMatrix.c: Modified dgCMatrix_colSums for sparseVector
	  result

2007-06-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/kronecker.R: fix typo (could lead to inf.recursion)
	* test/simple.R: testing that

	* R/sparseMatrix.R (prSpMatrix): change to be used as print()
	method as well (which can have arguments, show() can't).

2007-06-16 15:52  Douglas Bates <bates@stat.wisc.edu>

	* [r4466] R/dgCMatrix.R, src/dgCMatrix.c, src/dgCMatrix.h, src/init.c:
	  added dgCMatrix_colSums for [col,row][Sums,Means]

2007-06-15 23:15  Douglas Bates <bates@stat.wisc.edu>

	* [r4460] R/sparseMatrix.R, man/dgCMatrix-class.Rd, src/dgCMatrix.c,
	  src/dgCMatrix.h, src/init.c: added lm.fit.sparse (unexported),
	  coercion of "factor" to "dgCMatrix" and dgCMatrix_cholsol
	* [r4461] R/AllClass.R, man/sparseMatrix-class.Rd: draft "indicators"
	  class
	* [r4463] R/sparseMatrix.R, man/dgCMatrix-class.Rd,
	  man/sparseMatrix-class.Rd: Don't need an "indicators" class - use the
	  row names to store the levels - duh!	Added an example.

2007-06-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Csparse.c (Csparse_validate): check for *repeated* entries
	thanks to example from Christian Buchta; with a test here:
	* tests/simple.R:

2007-06-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (callGeneric): another fix, needed for some cases