@@ -1,3 +1,2 @@
 .Rhistory
-Intro2Matrix.*
 misc/
