@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.99875-3
-Date: 2007-..-..
+Date: 2007-06-29
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
